[package]
name = "forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
conerror = "0.1.8"
env_logger = "0.11.3"
log = "0.4.21"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.1"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "0.25.0", default-features = false, features = ["tls12", "ring"] }

[profile.release]
strip = true